--- a/city3d/templates/city3d/index.html
+++ b/city3d/templates/city3d/index.html
@@ -7,11 +7,11 @@
 {% endblock %}
 
 {% block body %}
-  <div id="map2" style="width: 100%; height: 100%"></div>
+  <div id="homepage_map" style="width: 100%; height: 100%"></div>
   <script>
     mapboxgl.accessToken = '{{ token }}';
       const map = new mapboxgl.Map({
-        container: 'map2',
+        container: 'homepage_map',
         style: 'mapbox://styles/mapbox/light-v10',
         zoom: 4,
         center: [-95, 38],
@@ -26,17 +26,19 @@
       {% for city in cities %}
 
         var marker = new mapboxgl.Marker().setLngLat([{{ city.viewport_long }}, {{ city.viewport_lat }}]).addTo(map)
-          .setPopup(new mapboxgl.Popup().setHTML("<a href=\"{% url 'hero' city.name %}\" style='outline: 0'"><b>{{ city.name }},{{ city.state }}</b></a>"));
+          .setPopup(new mapboxgl.Popup().setHTML("<a href=\'{% url 'hero' city.name %}\' style='outline: 0'><b>{{ city.name }},{{ city.state }}</b></a>"));
 
-        // marker.on('mouseover',function(ev) {
-        //   ev.target.openPopup();
+        // marker.on('mouseover',function() {
+        //   this.openPopup();
         // });
         //
-        // marker.on('mouseout',function(ev) {
-        //   ev.target.closePopup();
+        // marker.on('mouseout',function() {
+        //   this.closePopup();
         // });
 
       {% endfor %}
+
+
   </script>
 
 {% endblock %}
