--- a/city3d/templates/city3d/index.html
+++ b/city3d/templates/city3d/index.html
@@ -26,7 +26,7 @@
       {% for city in cities %}
 
         var marker = new mapboxgl.Marker().setLngLat([{{ city.viewport_long }}, {{ city.viewport_lat }}]).addTo(map)
-          .setPopup(new mapboxgl.Popup().setHTML("<a href=\'{% url 'hero' city.name %}\' style='outline: 0'><b>{{ city.name }},{{ city.state }}</b></a>"));
+          .setPopup(new mapboxgl.Popup().setHTML("Click link to view <br /> <a href=\'{% url 'hero' city.name %}\' style='outline: 0'><b>{{ city.name }},{{ city.state }}</b></a>"));
 
       {% endfor %}
 
