--- a/city3d/templates/city3d/layout.html
+++ b/city3d/templates/city3d/layout.html
@@ -13,7 +13,7 @@
     <body>
       <nav class="navbar sticky-top">
         <div class="d-flex justify-content-start" style="padding-left: 2em; padding-right: 2em">
-          <a class="navbar-brand" href="#" style="margin: 0;">City3D</a>
+          <a class="navbar-brand" href="/" style="margin: 0;">City3D</a>
           <ul class="nav-item dropdown" style="padding-left: 0em;">
             {% if city %}
             <a class="nav-link dropdown-toggle btn" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
